[tool.poetry]
name = "wanu"
version = "0.2.0"
description = "Why anodor NSP UPDADOR?!??"
authors = ["nozwock <57829219+nozwock@users.noreply.github.com>"]
license = "GPLv2"
readme = "README.md"

# Include bins
include = ["wanu/assets/bin/*"]

[tool.poetry.scripts]
wanu = 'wanu.__main__:run'

[tool.poetry.dependencies]
python = "^3.10"
appdirs = "^1.4.4"
typer = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
